--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 
 2015-11-13 Axel Moinet <bullekeup - gmail.com>
-	* 4.5.1-1
+	* 4.5.2-1
+	New major release from upstream
+	Ported GCC5 fixes for 4.5.1-2
+
+2015-11-13 Axel Moinet <bullekeup - gmail.com>
+	* 4.5.1-2
 	Added OVMF fixes for GCC5
 		http://permalink.gmane.org/gmane.comp.bios.tianocore.devel/14292
 	Added compile fixes for OVMF firmwares (VfrCompiler)
